# open-agent-api

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  config.local.yaml.example  docker-compose.yaml  env.example  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  chat.py
app/core/: __init__.py  auth.py  config.py
app/models/: __init__.py  chat.py
app/services/: __init__.py  agent_service.py
app/utils/: __init__.py
scripts/: build.sh  deploy.sh
tests/: README.md  __init__.py  debug_api.py  run_tests.py  simple_chat.py  simple_test.py  test_client.py  test_config.py  test_env.py
