[project]
name = "open-agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "sse-starlette>=1.8.2",
    "uvicorn[standard]>=0.24.0",
]
